--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,32 @@
   <groupId>RestAssuredProject</groupId>
   <artifactId>RestAssuredProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  
+  <build>
+	  <plugins>
+		  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng2.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.11.0</version>
+         
+        </plugin>
+      
+	  </plugins>
+  </build>
   <dependencies>
-
+	  
 <dependency>
     <groupId>io.rest-assured</groupId>
     <artifactId>rest-assured</artifactId>
