added new tests

--- a/data.properties
+++ b/data.properties
@@ -1,5 +1,6 @@
-emailid=test12345@test.com
-name=test12345
+emailid=test12345new1234@test.com
+name=test12New1234
 phonenum=9870043210
+phonenumUpdated=9870043999
 username=test123
 password=test123
